testsuite/gsksl/errors/invalid-return-type.glsl
float
foo ()
{
  return vec3(0);
}

void
main  ()
{
  float f = foo();
}
